tests/parser/fail/v22_fail_for_range_missing_bound.ep
# COMPILE_FAIL: Expected COLON
fun main(): void {
    for i: 3 {
    }
}
